--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                     <input type="text" id="identificacion" required>
                 </div>
                 <div class="form-group">
-                    <label for="nombres">Nombres (ej. José María):</label>
+                    <label for="nombres">Nombres:</label>
                     <input type="text" id="nombres" required>
                 </div>
                 <div class="form-group">
-                    <label for="apellidos">Apellidos (ej. Muñoz López):</label>
+                    <label for="apellidos">Apellidos</label>
                     <input type="text" id="apellidos" required>
                 </div>
                 <div class="form-group">
-                    <label for="direccion">Dirección (ej. Av. Simón Bolívar # 123-45):</label>
+                    <label for="direccion">Dirección:</label>
                     <input type="text" id="direccion" required>
                 </div>
                 <div class="form-group">
-                    <label for="telefono">Teléfono (ej. 300 123 4567):</label>
+                    <label for="telefono">Teléfono:</label>
                     <input type="text" id="telefono" required>
                 </div>
                 <button type="submit">Guardar</button>
